<resources>
    <string name="app_name">ChatApp</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="back_to_register">Back to Register</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="upload_pircture">Upload Pircture</string>
    <string name="user_information">User Information:</string>
</resources>